# ifj2022

./: CMakeLists.txt  CMakeLists.txt.in  README.md
.github/workflows/: test.yml
doc/: bibliography.bib  documentation.tex  ll.txt
src/: Makefile  codegen.c  codegen.h  error.c  error.h  expression.c  expression.h  parser.c  parser.h  scanner.c  scanner.h  stack.c  stack.h  structures.c  structures.h  symtable.c  symtable.h  vstr.c
test/: common.h  parser.cpp  scanner.cpp
